--- a/SpaAjaxKinvey/books.html
+++ b/SpaAjaxKinvey/books.html
@@ -45,6 +45,67 @@
                 <div><input type="button" id="buttonLoginUser" value="Login" /></div>
             </form>
         </section>
+
+        <section id="viewRegister">
+            <h1>Please register here</h1>
+            <form id="formRegister">
+                <div>Username:</div>
+                <div><input type="text" name= "username" required /></div>
+                <div>Password:</div>
+                <div><input type="password" name="passwd" required /></div>
+                <div><input type="button" id="buttonRegisterUser" value="Register" /></div>
+            </form>
+        </section>
+
+        <section id="viewBooks">
+            <h1>Books</h1>
+            <div id="books">
+                <table>
+                    <tr>
+                        <th>Title</th>
+                        <th>Author</th>
+                        <th>Description</th>
+                        <th>Actions</th>
+                    </tr>
+                    <tr>
+                        <td>Book title</td>
+                        <td>Book author</td>
+                        <td>Book description</td>
+                        <td>
+                            <a href="#">[Delete]</a>
+                            <a href="#">[Edit]</a>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </section>
+
+        <section id="viewCreateBook">
+            <h1>Create new book</h1>
+            <form id="formCreateBook">
+                <div>Title:</div>
+                <div><input type="text" name="title" required /></div>
+                <div>Author:</div>
+                <div><input type="text" name="author" required /></div>
+                <div>Description:</div>
+                <div><textarea name="descr" rows="10" required></textarea></div>
+                <div><input type="button" id="buttonCreateBook" value="Create" /></div>
+            </form>
+        </section>
+
+        <section id="viewEditBook">
+            <h1>Edit existing book</h1>
+            <form id="formEditBook">
+                <div><input type="hidden" name="id" required /></div>
+                <div>Title:</div>
+                <div><input type="text" name="title" required /></div>
+                <div>Author:</div>
+                <div><input type="text" name="author" required /></div>
+                <div>Description:</div>
+                <div><textarea name="descr" rows="10" required></textarea></div>
+                <div><input type="button" id="buttonEditBook" value="Edit" /></div>
+            </form>
+        </section>
     </main>
 
     <footer>Book Library - Simple SPA Application</footer>
